@@ -28,6 +28,10 @@ icomplete-in-buffer setup and completion functions to try and replace corfu/comp
 - Added `(setq icomplete-in-buffer t)` to improve in-buffer completion behavior.
 - Documented custom functions =my/simple-completion-at-point= utilizing =completion-in-region= and =completing-read=
 - Introduced `C-c TAB` keybinding for invoking custom completion.
+- Disabled `completion-auto-help` globally except in minibuffer.
+- Customized `TAB` key binding for minibuffer-local-completion-map.
+- Suppressed completion buffer help header via `completion-show-help`.
+- Updated documentation to reflect these adjustments and their rationale.
 
 ** <2025-01-01>
 
@@ -878,6 +882,13 @@ Lets give it a go!
 (setq icomplete-hide-common-prefix nil)
 (setq icomplete-separator " | ")
 (setq icomplete-in-buffer t)
+(setq completion-auto-help nil)
+(define-key minibuffer-local-completion-map (kbd "TAB")
+            (lambda ()
+              (interactive)
+              (let ((completion-auto-help t))
+                (minibuffer-complete))))
+(setq completion-show-help nil)
 (setq icomplete-with-completion-tables t)
 (setq icomplete-max-delay-chars 0)
 (setq icomplete-scroll t)
@@ -886,6 +897,10 @@ Lets give it a go!
 #+end_src
 
 Note that the =completion-styles= variable is globally set to include =flex= because, by default, Icomplete is the completion engine that operates in the buffer. Since Fido mode, which is enabled by default, does not support `flex` (something I have now grown accustomed to), this adjustment is necessary.
+
+Also note that when =completion-in-buffer= is turned on I have globally turned off the display of the *Completions* buffer through =completion-auto-help= except in the minibuffer as sometimes I would like to bring up the full list of completions, like maybe embark collect or export.
+
+Note also =completion-auto-help= to nil means that the help header in the completions buffer is not shown which tidied things up.
 
 As another option, how about a simple defun leveraging =completion-in-region= or =completing-read= :
 
