@@ -473,6 +473,13 @@ if COLOR is not provided as an argument."
 (setq icomplete-hide-common-prefix nil)
 (setq icomplete-separator " | ")
 (setq icomplete-in-buffer t)
+(setq completion-auto-help nil)
+(define-key minibuffer-local-completion-map (kbd "TAB")
+            (lambda ()
+              (interactive)
+              (let ((completion-auto-help t))
+                (minibuffer-complete))))
+(setq completion-show-help nil)
 (setq icomplete-with-completion-tables t)
 (setq icomplete-max-delay-chars 0)
 (setq icomplete-scroll t)
