@@ -17,6 +17,10 @@ icomplete-in-buffer setup and completion functions to try and replace corfu/comp
 - Added `(setq icomplete-in-buffer t)` to improve in-buffer completion behavior.
 - Documented custom functions =my/simple-completion-at-point= utilizing =completion-in-region= and =completing-read=
 - Introduced `C-c TAB` keybinding for invoking custom completion.
+- Disabled `completion-auto-help` globally except in minibuffer.
+- Customized `TAB` key binding for minibuffer-local-completion-map.
+- Suppressed completion buffer help header via `completion-show-help`.
+- Updated documentation to reflect these adjustments and their rationale.
 
 ** <2025-01-01>
 
